[package]
name = "acfutils-sys"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]

[lib]
doctest = false

[features]
generate-bindings = ["dep:bindgen"]

[build-dependencies]
bindgen = { version = "0.66.1", optional = true }
build-support = { path = "../build-support" }
